--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-dynamic-modules": "^5.2.3"
+    "redux-dynamic-modules": "^5.2.3",
+    "redux-observable": "^2.0.0",
+    "rxjs": "^7.1.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
